# BankerAlgo_ResourcesAllocation

./: .gitignore  AUTHOR.md  CMakeLists.txt  GNUmakefile  README.md  rapport.tex
client/: client_thread.c  client_thread.h  main.c
common/: common.c  common.h
server/: main.c  server_thread.c  server_thread.h
